[lworld] Layout helper can have incorrect is_null_free bit for flat arrays

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • None
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      The logic computing the layout helper for flat arrays unconditionally sets the is_null_free bit, which is incorrect if the array uses the NULLABLE_ATOMIC_FLAT layout.
       

            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: