8350283: [lworld] Layout helper can have incorrect is_null_free bit for flat arrays